# CampusLive

./: CMakeLists.txt  OwlLive.pro  README.md
config/: config.ini
include/libavutil/: common.h
lib/: boost_system.lib  boost_thread.lib
src/FluentUI/: FluTheme.cpp  Fluent.cpp  WindowHelper.cpp  WindowHelper.h  res.qrc
src/FluentUI/build-preset/: plugins.qmltypes
src/FluentUI/controls/: FluWindow.qml
src/OwlLive/: AppInfo.cpp  ChatController.cpp  ChatController.h  Client.cpp  Client.h  CourseController.cpp  CourseController.h  DiscussController.cpp  DiscussController.h  LiveController.cpp  LiveController.h  Logincontroller.cpp  Logincontroller.h  Network.cpp  Network.h  OwlLive.pro  PlaybackController.cpp  PlaybackController.h  main.cpp  stdafx.h  types.h
src/OwlLive/live/: aacdecoder.cpp  aacdecoder.h  aacencoder.cpp  aacencoder.h  aacrtmppackager.cpp  aacrtmppackager.h  audiocapturer.cpp  audiocapturer.h  audiodecodeloop.cpp  audiodecodeloop.h  audiooutsdl.cpp  audiooutsdl.h  audioresampler.cpp  audioresampler.h  avsync.cpp  avsync.h  avtimebase.cpp  avtimebase.h  commonlooper.cpp  commonlooper.h  dlog.cpp  dlog.h  framequeue.cpp  framequeue.h  h264decoder.cpp  h264decoder.h  h264encoder.cpp  h264encoder.h  imagescale.h  livewindow.ui  looper.cpp  looper.h  mediabase.cpp  mediabase.h  naluloop.cpp  naluloop.h  packetqueue.cpp  packetqueue.h  pullwork.cpp  pullwork.h  (+26 more)
src/OwlLive/qml/: App.qml  ClassPlayback.qml  CourseInfoStudent.qml  (+6 more)
src/OwlLive_Server/: CMakeLists.txt  Database.cpp  Database.h  Server.cpp  Server.h  Types.h  User.cpp  User.h  main.cpp
(+178 files in other folders)
